# pointreg

./: .gitignore  README.md  app.py  environment.yml  pyproject.toml  pytest.ini  requirements.txt
checkpoints/: geotransformer-bunny-3dmatch-ft.pth.tar
finetune_kit/: GeoTransformer低重合失败原因分析.md  README_微调傻瓜包.md  evaluate_3dmatch.py  finetune_3dmatch_bunny.py  run_finetune_windows.bat  setup_env_windows.bat  微调失败原因总结.md  环境配置手把手.md  给CODEX的交接说明.md
outputs/regression/: all_pairs_after.csv
pointreg/: __init__.py  cli.py  cloudcompare.py  coarse.py  coarse_teaser.py  correspondence_search.py  dataset.py  experiments.py  fusion.py  geotransformer.py  global_search.py  icp.py  io.py  metrics.py  models.py  nearest.py  pipeline.py  preprocessing.py  runtime.py  scoring.py  transforms.py
scripts/: benchmark_low_overlap.py  diagnose_gcransac.py  finetune_geotransformer_bunny.py  ubuntu_setup.sh
tests/: conftest.py  test_all_pairs_hard_cases.py  test_cloudcompare.py  test_dataset_registration.py  test_final_evaluation.py  test_geotransformer_robust.py  test_global_search.py  test_icp.py  test_low_overlap_registration.py  test_metrics_pipeline.py  test_preprocessing.py  test_robust_registration.py  test_runtime.py  test_transforms.py  test_webui.py
